5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1832_1656.log
== TEST (2019-06-13 18:34:21) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:02) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
for p in v:
	if(v[p]==BE)
-- ERROR:
File "XXXX", line 5
    if(v[p]==BE)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:33) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
v2=zeros(5,dtype=int):
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(v[p]=="BE"):
		v2[p0]=v2[p0]+1
	elif(v[p]=="ES"):
		v2[p1]=v2[p1]+1
	elif(v[p]=="FR"):
		v2[p2]=v2[p2]+1
	elif(v[p]=="IT"):
		v2[p3]=v2[p3]+1
	elif(v[p]=="PT"):
		v2[p4]=v2[p4]+1

-- ERROR:
File "XXXX", line 4
    v2=zeros(5,dtype=int):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:49:18) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
v2=(zeros(5,dtype=int)):
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(v[p]=="BE"):
		v2[p0]=v2[p0]+1
	elif(v[p]=="ES"):
		v2[p1]=v2[p1]+1
	elif(v[p]=="FR"):
		v2[p2]=v2[p2]+1
	elif(v[p]=="IT"):
		v2[p3]=v2[p3]+1
	elif(v[p]=="PT"):
		v2[p4]=v2[p4]+1

-- ERROR:
File "XXXX", line 4
    v2=(zeros(5,dtype=int)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:50:24) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
v2=zeros(5,dtype=int):
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(v[p]=="BE"):
		v2[p0]=v2[p0]+1
	elif(v[p]=="ES"):
		v2[p1]=v2[p1]+1
	elif(v[p]=="FR"):
		v2[p2]=v2[p2]+1
	elif(v[p]=="IT"):
		v2[p3]=v2[p3]+1
	elif(v[p]=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)

-- EXECUTION TIME:
0.699262
-- ERROR:
  File "/home/codebench/codes/1832/1656/main.py", line 4
    v2=zeros(5,dtype=int):
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:52:19) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
v2=zeros(5,dtype=int):
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(v[p]=="BE"):
		v2[p0]=v2[p0]+1
	elif(v[p]=="ES"):
		v2[p1]=v2[p1]+1
	elif(v[p]=="FR"):
		v2[p2]=v2[p2]+1
	elif(v[p]=="IT"):
		v2[p3]=v2[p3]+1
	elif(v[p]=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
File "XXXX", line 4
    v2=zeros(5,dtype=int):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:52:39) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(v[p]=="BE"):
		v2[p0]=v2[p0]+1
	elif(v[p]=="ES"):
		v2[p1]=v2[p1]+1
	elif(v[p]=="FR"):
		v2[p2]=v2[p2]+1
	elif(v[p]=="IT"):
		v2[p3]=v2[p3]+1
	elif(v[p]=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:13:58) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',').upper()
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p==BE):
		v2[p0]=v2[p0]+1
	elif(v[p]=="ES"):
		v2[p1]=v2[p1]+1
	elif(v[p]=="FR"):
		v2[p2]=v2[p2]+1
	elif(v[p]=="IT"):
		v2[p3]=v2[p3]+1
	elif(v[p]=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:14:57) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p==BE):
		v2[p0]=v2[p0]+1
	elif(v[p]==ES):
		v2[p1]=v2[p1]+1
	elif(v[p]==FR):
		v2[p2]=v2[p2]+1
	elif(v[p]==IT):
		v2[p3]=v2[p3]+1
	elif(v[p]==PT):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:49) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p==BE):
		v2[p0]=v2[p0]+1
	elif(p==ES):
		v2[p1]=v2[p1]+1
	elif(p==FR):
		v2[p2]=v2[p2]+1
	elif(p==IT):
		v2[p3]=v2[p3]+1
	elif(p==PT):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:25) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p.upper=="BE"):
		v2[p0]=v2[p0]+1
	elif(p.upper=="ES"):
		v2[p1]=v2[p1]+1
	elif(p.upper=="FR"):
		v2[p2]=v2[p2]+1
	elif(p.upper=="IT"):
		v2[p3]=v2[p3]+1
	elif(p.upper=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:58) 
-- CODE:
from numpy import *
v=array(eval(input("paises:"ES"" "))).split(',')
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p.upper=="BE"):
		v2[p0]=v2[p0]+1
	elif(p.upper=="ES"):
		v2[p1]=v2[p1]+1
	elif(p.upper=="FR"):
		v2[p2]=v2[p2]+1
	elif(p.upper=="IT"):
		v2[p3]=v2[p3]+1
	elif(p.upper=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
File "XXXX", line 2
    v=array(eval(input("paises:"ES"" "))).split(',')
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:13) 
-- CODE:
from numpy import *
v=array(eval(input("paises:"ES" "))).split(',')
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p.upper=="BE"):
		v2[p0]=v2[p0]+1
	elif(p.upper=="ES"):
		v2[p1]=v2[p1]+1
	elif(p.upper=="FR"):
		v2[p2]=v2[p2]+1
	elif(p.upper=="IT"):
		v2[p3]=v2[p3]+1
	elif(p.upper=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
File "XXXX", line 2
    v=array(eval(input("paises:"ES" "))).split(',')
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:23) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
v2[p0]=0
v2[p1]=0
v2[p2]=0
v2[p3]=0
v2[p4]=0
for p in v:
	if(p.upper=="BE"):
		v2[p0]=v2[p0]+1
	elif(p.upper=="ES"):
		v2[p1]=v2[p1]+1
	elif(p.upper=="FR"):
		v2[p2]=v2[p2]+1
	elif(p.upper=="IT"):
		v2[p3]=v2[p3]+1
	elif(p.upper=="PT"):
		v2[p4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:21:52) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p.upper=="BE"):
		v2[0]=v2[p0]+1
	elif(p.upper=="ES"):
		v2[1]=v2[p1]+1
	elif(p.upper=="FR"):
		v2[2]=v2[p2]+1
	elif(p.upper=="IT"):
		v2[3]=v2[p3]+1
	elif(p.upper=="PT"):
		v2[4]=v2[p4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:07) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p.upper=="BE"):
		v2[0]=v2[p0]+1
	elif(p.upper=="ES"):
		v2[1]=v2[p1]+1
	elif(p.upper=="FR"):
		v2[2]=v2[p2]+1
	elif(p.upper=="IT"):
		v2[3]=v2[p3]+1
	elif(p.upper=="PT"):
		v2[4]=v2[p4]+1
print(max(v2))
print(v2)
-- EXECUTION TIME:
0.924751
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1656/main.py", line 2, in <module>
    v=array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'IT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:22:35) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p.upper=="BE"):
		v2[0]=v2[0]+1
	elif(p.upper=="ES"):
		v2[1]=v2[1]+1
	elif(p.upper=="FR"):
		v2[2]=v2[2]+1
	elif(p.upper=="IT"):
		v2[3]=v2[3]+1
	elif(p.upper=="PT"):
		v2[4]=v2[4]+1
print(max(v2))
print(v2)
-- EXECUTION TIME:
1.19562
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1656/main.py", line 2, in <module>
    v=array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'IT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:22:38) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p.upper=="BE"):
		v2[0]=v2[0]+1
	elif(p.upper=="ES"):
		v2[1]=v2[1]+1
	elif(p.upper=="FR"):
		v2[2]=v2[2]+1
	elif(p.upper=="IT"):
		v2[3]=v2[3]+1
	elif(p.upper=="PT"):
		v2[4]=v2[4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:27:32) 
-- CODE:
from numpy import *
v=array(eval(input("paises: "))).split(',')
v=v.upper()
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p=="BE"):
		v2[0]=v2[0]+1
	elif(p=="ES"):
		v2[1]=v2[1]+1
	elif(p=="FR"):
		v2[2]=v2[2]+1
	elif(p=="IT"):
		v2[3]=v2[3]+1
	elif(p=="PT"):
		v2[4]=v2[4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:28:05) 
-- CODE:
from numpy import *
v=array(eval(input("paises: ")))
v=v.upper()
v=v.split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p=="BE"):
		v2[0]=v2[0]+1
	elif(p=="ES"):
		v2[1]=v2[1]+1
	elif(p=="FR"):
		v2[2]=v2[2]+1
	elif(p=="IT"):
		v2[3]=v2[3]+1
	elif(p=="PT"):
		v2[4]=v2[4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:28:42) 
-- CODE:
from numpy import *
v=array(eval(input()))
v=v.upper()
v=v.split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p=="BE"):
		v2[0]=v2[0]+1
	elif(p=="ES"):
		v2[1]=v2[1]+1
	elif(p=="FR"):
		v2[2]=v2[2]+1
	elif(p=="IT"):
		v2[3]=v2[3]+1
	elif(p=="PT"):
		v2[4]=v2[4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:29:06) 
-- CODE:
from numpy import *
v=array(eval(input("")))
v=v.upper()
v=v.split(',')
p=0
v2=zeros(5,dtype=int)
for p in v:
	if(p=="BE"):
		v2[0]=v2[0]+1
	elif(p=="ES"):
		v2[1]=v2[1]+1
	elif(p=="FR"):
		v2[2]=v2[2]+1
	elif(p=="IT"):
		v2[3]=v2[3]+1
	elif(p=="PT"):
		v2[4]=v2[4]+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:45:11) 
-- CODE:
from numpy import *
v=input("")
v=v.upper()
v=v.split(',')
p=0
v2=zeros(5,dtype=int)
k=0
for p in v:
	if(p=="BE"):
		v2[0]=v2[0]+1
	elif(p=="ES"):
		v2[1]=v2[1]+1
	elif(p=="FR"):
		v2[2]=v2[2]+1
	elif(p=="IT"):
		v2[3]=v2[3]+1
	elif(p=="PT"):
		v2[4]=v2[4]+1
	k=k+1
print(max(v2))
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:45:31) 
-- CODE:
from numpy import *
v=input("")
v=v.upper()
v=v.split(',')
p=0
v2=zeros(5,dtype=int)
k=0
for p in v:
	if(p=="BE"):
		v2[0]=v2[0]+1
	elif(p=="ES"):
		v2[1]=v2[1]+1
	elif(p=="FR"):
		v2[2]=v2[2]+1
	elif(p=="IT"):
		v2[3]=v2[3]+1
	elif(p=="PT"):
		v2[4]=v2[4]+1
	k=k+1
print(max(v2))
print(v2)
-- EXECUTION TIME:
0.968297
-- TEST CASE 1:
---- input:
IT,FR,BE,BE,BE,ES,PT
---- correct output:
3
[3 1 1 1 1]
---- user output:
3
[3 1 1 1 1]
-- TEST CASE 2:
---- input:
PT,FR,FR,FR,FR,FR,PT,PT,ES,PT,ES,ES,ES,PT,IT
---- correct output:
5
[0 4 5 1 5]
---- user output:
5
[0 4 5 1 5]
-- TEST CASE 3:
---- input:
BE,IT,BE,IT,IT,BE,PT,IT,ES,PT,IT,PT,IT,IT,ES,ES,FR,FR,BE,PT,FR,ES,ES,FR,PT,BE,IT,PT,IT,PT,PT,IT
---- correct output:
10
[ 5  5  4 10  8]
---- user output:
10
[ 5  5  4 10  8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
